--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: tracer
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-Depends: R (>= 3.3.2)
-License: What license is it under?
+Title: Tools for Informing Contact Tracing
+Version: 0.0.1
+Authors@R: c(person("Thibaut", "Jombart", email = "thibautjombart@gmail.com", role = c("aut", "cre")), person("Dirk", "Schumacher", email = "mail@dirk-schumacher.net", role = "aut"))
+Description: Simulate outbreaks with contact.
+Depends:
+    R (>= 3.3.2)
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
+Imports: stats, epicontacts
+Suggests: distcrete
