adding distcrete from github as dep for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,10 @@
 language: R
 sudo: false
 cache: packages
+
+warnings_are_errors: false
+
+r_github_packages: reconhub/distcrete
+
+after_success:
+  - Rscript -e 'covr::codecov()'
