Add a function to export exposures
from epicontacts outbreak objects to be used with the group scoring function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,9 @@ RoxygenNote: 5.0.1
 Imports: stats, epicontacts
 Suggests: distcrete,
     covr,
-    testthat
-
+    testthat,
+    outbreaks
 Remotes:
   reconhub/distcrete,
-  reconhub/epicontacts
+  reconhub/epicontacts,
+  reconhub/outbreaks
